navbar updated and gallery-section overlap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -155,11 +155,11 @@ textarea.form-control {
 .header {
   position: fixed;
   right: 0;
-  width: 26%;
+  width: 20.4%;
   height: 100%;
   background-color: #356ba2;
   overflow-y: auto;
-  z-index: 1;
+  z-index: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -595,7 +595,7 @@ textarea.form-control {
 /* <<< content-box >>> */
 #content-box {
   overflow: hidden;
-  width: calc(74% + 1px);
+  width: calc(80% + 1px);
 }
 
 @media (max-width: 991px) {
